--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-multi-select-component": "^4.1.14",
     "react-redux": "^7.2.6",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-select": "^5.3.2",
